<resources>
    <string name="app_name">Safe home</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="error_image">Error :(</string>

    <!-- SignInFragment -->
    <string name="title_sign_in_fragment">Welcome!</string>
    <string name="email">Email</string>
    <string name="email_hint">email@gmail.com</string>
    <string name="password">Password</string>
    <string name="password_hint">********</string>
    <string name="sign_in_button">Log In</string>
    <string name="or">Or</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up_button">Create an account</string>
    <string name="sign_in_with_google">Sign in with Google</string>

    <!-- SignUpFragment -->
    <string name="title_sign_up_fragment">Create Account</string>
    <string name="full_name">Name Surname</string>
    <string name="full_name_hint">Full Name</string>
    <string name="date">MM DD YYYY</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_and_policy">By continuing, you agree to \nTerms of Use and Privacy Policy.</string>
    <string name="select_date">Choose your date of birth</string>

    <!-- ResetPasswordFragment -->
    <string name="title_reset_password_fragment">Reset password</string>
    <string name="forgot_description">Enter your email address to reset your password. After confirming your email, you will receive a new password in your mail.</string>
    <string name="email_enter">Enter email address</string>
    <string name="send">Send</string>

    <!-- HomesFragment -->
    <string name="title_homes_fragment">Homes</string>
    <string name="home_name">My home</string>
    <string name="address_home">1234 Elm Street, Apt 56B, Los Angeles</string>
    <string name="status_armed">Armed</string>
    <string name="status_disarmed">Disarmed</string>
    <string name="status_custom">Custom</string>
    <string name="homes_empty">There are no houses</string>

    <!-- SensorFragment -->
    <string name="title_sensor_fragment">Home</string>
    <string name="my_sensors">My sensors</string>
    <string name="archive">Archive</string>
    <string name="paring_code">2S83J6d</string>
    <string name="sensors_empty">There are no sensors</string>

    <!-- NotificationFragment -->
    <string name="notification_permission_title">Notification permission required</string>
    <string name="notification_permission_message">Allow notification access in phone settings</string>

    <string name="title_notification_fragment">Notification</string>
    <string name="notification_title">My notification</string>
    <string name="notification_body">Alarm!!!</string>
    <string name="notification_date">17:00 June 13</string>
    <string name="general">General</string>
    <string name="security">Security</string>

    <!-- ProfileFragment -->
    <string name="title_profile_fragment">Profile</string>
    <string name="profile_name">Vladislav</string>
    <string name="profile_date">21 / 02 / 2005</string>
    <string name="profile_edit">Edit Profile</string>
    <string name="profile_settings">Settings</string>
    <string name="profile_help">Help</string>
    <string name="profile_logout">Logout</string>
    <string name="subscriptions">Subscriptions</string>

    <!-- SettingsFragment -->
    <string name="title_settings_fragment">Settings</string>
    <string name="settings_notify_main">Notifications</string>
    <string name="settings_notify_addition">Turn on notifications</string>
    <string name="settings_faceId_main">Face ID</string>
    <string name="settings_faceId_addition">Confirming critical transactions using Face ID</string>

    <!-- ChangePasswordFragment -->
    <string name="title_change_password_fragment">Change Password</string>
    <string name="new_password">New password</string>
    <string name="current_password">Current password</string>
    <string name="subscribe_type">Basic</string>

    <!-- Biometric -->
    <string name="biometric_camera_permission_title">Camera permission required</string>
    <string name="biometric_camera_permission_message">Allow camera access in phone settings</string>

    <string name="biometric_enrollment_progress">%1$s\nЗбір даних: %2$d/%3$d</string>
    <string name="biometric_see_camera">Look into the camera</string>
    <string name="biometric_position_face">Position your face in the frame</string>
    <string name="biometric_camera_access_required">Camera access is required for face recognition</string>
    <string name="biometric_look_at_camera">Look at the camera</string>
    <string name="biometric_searching_face">Searching for a face</string>
    <string name="biometric_verifying_face">Verifying face</string>
    <string name="biometric_face_recognized">Face recognized</string>
    <string name="biometric_failed_start_camera">Failed to start camera</string>

    <string name="biometric_face_not_found">Face not found</string>
    <string name="biometric_face_multiple_faces">There should only be one face in the frame</string>
    <string name="biometric_face_found">Face found</string>
    <string name="biometric_face_frame_processing_error">Failed to process frame</string>
    <string name="biometric_face_crop_error">Unable to crop face</string>
    <string name="biometric_face_template_verification_error">Biometric template verification error</string>
    <string name="biometric_face_frame_analysis_error">Frame analysis error</string>

    <string name="biometric_enrollment_look_straight">Look straight at the camera</string>
    <string name="biometric_enrollment_look_up">Slightly raise your head</string>
    <string name="biometric_enrollment_look_down">Slightly lower your head</string>
    <string name="biometric_enrollment_turn_left">Slightly turn your head left</string>
    <string name="biometric_enrollment_turn_right">Slightly turn your head right</string>

    <string name="biometric_enrollment_camera_access_required">Camera access is required for face enrollment</string>
    <string name="biometric_enrollment_saving_template">Saving biometric template</string>
    <string name="biometric_enrollment_enabled">Biometric login has been enabled</string>

    <string name="biometric_face_template_creation_error">Biometric template creation error</string>


    <!-- DialogAddHome -->
    <string name="newHome">New home</string>
    <string name="name">Name</string>
    <string name="address">Address</string>

    <!-- DialogAddSensor -->
    <string name="newSensor">New sensor</string>
    <string name="sensor_name">My sensor</string>
    <string name="type">Type</string>
    <string name="window">Window</string>
    <string name="door">Door</string>

    <!-- DialogLogout -->
    <string name="dialog_logout_title">Do you really want to leave?</string>
    <string name="dialog_logout_body">Are you sure you want to leave? You might miss important notifications</string>

    <!-- DialogFirstBiometric -->
    <string name="biometric_face_id_suggestion_title">Set up Face ID?</string>
    <string name="biometric_face_id_suggestion_message">Turn on face recognition to more securely confirm important actions in the system</string>
    <string name="biometric_go_to_settings">Settings</string>


    <!-- ItemSensor -->
    <string name="status">Status</string>


    <!-- Also -->
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>

</resources>
