<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_camera_permission"
    android:padding="12dp"
    style="@style/dialog" >

    <TextView
        style="@style/TextView"
        android:fontFamily="@font/poppins_black"
        android:text="@string/biometric_camera_permission_title"
        android:padding="4dp" />

    <TextView
        style="@style/TextView"
        android:text="@string/biometric_camera_permission_message"
        android:padding="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingTop="20dp" >

        <TextView
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_gravity="end"
            android:text="@string/cancel"
            android:textColor="#3A3A3A"
            android:backgroundTint="#CECECE"
            style="@style/TextView" />

        <TextView
            android:id="@+id/confirmButton"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:text="@string/ok"
            android:textColor="#3A3A3A"
            android:backgroundTint="#CECECE"
            style="@style/TextView" />

    </LinearLayout>

</LinearLayout>