<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.main.fragments.HomesFragment"
    android:id="@+id/homesFragment"
    style="@style/Fragment" >

    <ImageButton
        android:id="@+id/backButton"
        style="@style/BackButton"
        android:layout_margin="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/error_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_textView"
        style="@style/TitleTextView"
        android:text="@string/title_settings_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/main_container"/>

    <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rounded_top_large"
        android:backgroundTint="@color/onPrimary"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:paddingBottom="20dp"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:paddingBottom="10dp">

            <TextView
                style="@style/TextView"
                android:id="@+id/mainTextNotify"
                android:text="@string/settings_notify_main"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/SmallGrayTextView"
                android:id="@+id/additionalTextNotify"
                android:text="@string/settings_notify_addition"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mainTextNotify" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchNotify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/mainTextNotify"
                app:layout_constraintBottom_toBottomOf="@id/additionalTextNotify" />

            <TextView
                style="@style/TextView"
                android:id="@+id/mainTextTheme"
                android:text="@string/settings_faceId_main"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/additionalTextNotify" />

            <TextView
                style="@style/SmallGrayTextView"
                android:id="@+id/additionalTextTheme"
                android:text="@string/settings_faceId_addition"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mainTextTheme" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchFaceId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/mainTextTheme"
                app:layout_constraintBottom_toBottomOf="@id/additionalTextTheme" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/changePasswordConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/additionalTextTheme" >

                <ImageView
                    android:id="@+id/changePasswordImageView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/error_image"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_key"
                    android:padding="7dp"
                    android:background="@drawable/rounded_all_small_background"
                    android:backgroundTint="#65A3FB"
                    app:tint="@color/white"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintWidth_percent="0.09"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/changePasswordTextView"
                    style="@style/TextView"
                    android:text="@string/title_change_password_fragment"
                    android:layout_marginStart="10dp"
                    app:layout_constraintTop_toTopOf="@+id/changePasswordImageView"
                    app:layout_constraintBottom_toBottomOf="@+id/changePasswordImageView"
                    app:layout_constraintStart_toEndOf="@+id/changePasswordImageView" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>